Added css and js, fixed register link

--- a/Project/templates/adminform.html
+++ b/Project/templates/adminform.html
@@ -58,8 +58,8 @@
 				<tr>
 					<td>{{row['first_name']}}</td>
 					<td>{{row['last_name']}}</td>
-					<td>{{row['phone']}}</td>
-					<td>{{row['email']}}</td>
+					<td>{{row['Phone']}}</td>
+					<td>{{row['Email']}}</td>
 				</tr>
 				{% endfor %}
 			</tbody>
