--- a/Project/templates/adminhome.html
+++ b/Project/templates/adminhome.html
@@ -1,3 +1,11 @@
-{% include 'adminheader.html'%}
-<marquee>WELCOME.......</marquee>
+{% include 'adminheader.html' %}
+
+
+
+
+
+
+
+
+<h1>asdfghbjnkm</h1>
 {% include 'footer.html' %}
