--- a/Project/templates/publichome.html
+++ b/Project/templates/publichome.html
@@ -1,3 +1,6 @@
 {% include 'publicheader.html'%}
 <marquee>WELCOME</marquee>
-{% include 'footer.html'%}
+<a href="/">Home</a><br>
+<a href="/login">Login</a><br>
+<a href="/registerhome">Register</a>
+{% include 'footer.html' %}
