--- a/Project/templates/adminheader.html
+++ b/Project/templates/adminheader.html
@@ -1,12 +1,88 @@
-<!DOCTYPE html>
-<html>
+
+<html lang="zxx">
 <head>
-	<title></title>
+	<title>SolMusic | HTML Template</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="SolMusic HTML Template">
+	<meta name="keywords" content="music, html">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<!-- Favicon -->
+	<link href="/static/img/favicon.ico" rel="shortcut icon"/>
+
+	<!-- Google font -->
+	<link href="static/https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap" rel="stylesheet">
+ 
+	<!-- Stylesheets -->
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="/static/css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="/static/css/owl.carousel.min.css"/>
+	<link rel="stylesheet" href="/static/css/slicknav.min.css"/>
+
+	<!-- Main Stylesheets -->
+	<link rel="stylesheet" href="/static/css/style.css"/>
+
+
+	<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+
 </head>
 <body>
-<div>
-	<div>
-		
+	<!-- Page Preloder -->
+	<div id="preloder">
+		<div class="loader"></div>
 	</div>
+
+	<!-- Header section -->
+	<header class="header-section clearfix">
+		<a href="index.html" class="site-logo">
+			<img src="/static/img/logo.png" alt="">
+		</a>
+		<div class="header-right">
+			<!-- <a href="/" class="main-menu"><font> Home </font></a> -->
+			<span>|</span>
+			<div class="user-panel">
+				<a href="/admin/adminhome" class="">Home</a>
+				<a href="/login" class="">Logout</a>
+				<a href="/admin/adminform" class="register">Manage User</a>
+			</div> 
+		</div>
+		<!-- <ul class="main-menu">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Pages</a>
+				<ul class="sub-menu">
+					<li><a href="category.html">Category</a></li>
+					<li><a href="playlist.html">Playlist</a></li>
+					<li><a href="artist.html">Artist</a></li>
+					<li><a href="blog.html">Blog</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</li>
+			<li><a href="blog.html">News</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul> -->
+	</header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	<a href="/admin/adminhome"> HOME </a><br/>
 	<a href="/admin/adminform">Manage User</a>
