--- a/Project/templates/registerhome.html
+++ b/Project/templates/registerhome.html
@@ -37,7 +37,7 @@
 			</tr>
 			<tr><td></td></tr>
 			<tr>
-				<td colspan="2" align="center"><input type="submit" name="submit" value="submit"></td>
+				<td colspan="2" align="center"><input type="submit" name="submit1" value="submit"></td>
 			</tr>
 		</table>
 	</form>
