--- a/Project/templates/index.html
+++ b/Project/templates/index.html
@@ -1,10 +1,10 @@
 
 <html lang="zxx">
 <head>
-	<title>SolMusic | HTML Template</title>
+	<title>User Recognition Using Face Detection & Keystroke Dynamics</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="SolMusic HTML Template">
-	<meta name="keywords" content="music, html">
+	<meta name="description" content="User Recognition">
+	<meta name="keywords" content="keystroke, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<!-- Favicon -->
@@ -75,15 +75,15 @@
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="hs-text">
-								<h2><span>Music</span> for everyone.</h2>
+								<h2><span>User Recognition</span> for everyone.</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
-								<a href="#" class="site-btn">Download Now</a>
-								<a href="#" class="site-btn sb-c2">Start free trial</a>
+								<a href="#" class="site-btn">Donate now</a>
+								<a href="#" class="site-btn sb-c2">Send Kidneys</a>
 							</div>
 						</div>
 						<div class="col-lg-6">
 							<div class="hr-img">
-								<img src="/static/img/hero-bg.png" alt="">
+								<img src="/static/img/keyboard.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -94,15 +94,15 @@
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="hs-text">
-								<h2><span>Listen </span> to new music.</h2>
+								<h2><span>GIVE MEH </span> Caffein</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
-								<a href="#" class="site-btn">Download Now</a>
-								<a href="#" class="site-btn sb-c2">Start free trial</a>
+								<a href="#" class="site-btn">Donate now</a>
+								<a href="#" class="site-btn sb-c2">Send Kidneys</a>
 							</div>
 						</div>
 						<div class="col-lg-6">
 							<div class="hr-img">
-								<img src="/static/img/hero-bg.png" alt="">
+								<img src="/static/img/keyboard.png" alt="">
 							</div>
 						</div>
 					</div>
