Added placeholder logo and added css to login page

--- a/Project/templates/adminheader.html
+++ b/Project/templates/adminheader.html
@@ -1,10 +1,10 @@
 
 <html lang="zxx">
 <head>
-	<title>SolMusic | HTML Template</title>
+	<title>User Recognition Using Face Detection & Keystroke Dynamics</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="SolMusic HTML Template">
-	<meta name="keywords" content="music, html">
+	<meta name="description" content="User Recognition">
+	<meta name="keywords" content="keystroke, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<!-- Favicon -->
@@ -78,11 +78,5 @@
 
 
 
-
-
-
-
-
-
-	<a href="/admin/adminhome"> HOME </a><br/>
-	<a href="/admin/adminform">Manage User</a>
+	<!-- <a href="/admin/adminhome"> HOME </a><br/>
+	<a href="/admin/adminform">Manage User</a> -->
