--- a/Project/templates/login.html
+++ b/Project/templates/login.html
@@ -1,7 +1,7 @@
 {%include 'publicheader.html'%}
-<form method="post">
+<form method="post" style="background: #383b70;">
 	<table align="center">
-		<h1 align="center"><u>Login</u></h1>
+		<h1 align="center" style="color: white;"><u>Login</u></h1>
 		<tr>
 			<th>User Name:</th>
 			<td><input type="text" name="uname"></td>
@@ -12,7 +12,7 @@
 		</tr>
 		<tr>
 			<td align="center" colspan="2"><input type="submit" name="submit" value="Login"></td></tr>
-			<tr><td align="center" colspan="2"><input type="submit" name="register" value="Register">
+			<!-- <tr><td align="center" colspan="2"><input type="submit" name="register" value="Register"> -->
 		</td>
 	</tr>
 	</table>
