fixed css in adminhome, userhome

--- a/Project/templates/adminhome.html
+++ b/Project/templates/adminhome.html
@@ -2,10 +2,12 @@
 
 
 
+<h1 style="color: white; background-color: #0a183d">Greetings Admin!</h1>
 
 
 
 
 
-<h1>asdfghbjnkm</h1>
+
+
 {% include 'footer.html' %}
