--- a/Project/templates/index.html
+++ b/Project/templates/index.html
@@ -62,7 +62,8 @@
 						<div class="col-lg-6">
 							<div class="hs-text">
 								<h2><span>User Recognition</span> for everyone.</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+								<p>Keystroke dynamics or typing dynamics refers to the automated method of identifying or confirming the identity of an individual based on the manner and the rhythm of typing on a keyboard. Keystroke dynamics is a behavioral biometric, this means that the biometric factor is ‘something you do’. </p>
+								<p>A facial recognition system is a technology capable of identifying or verifying a person from a digital image or a video frame from a video source. There are multiple methods in which facial recognition systems work, but in general, they work by comparing selected facial features from given image with faces within a database. It is also described as a Biometric Artificial Intelligence based application that can uniquely identify a person by analysing patterns based on the person's facial textures and shape.</p>
 								<a href="#" class="site-btn">Donate now</a>
 								<a href="#" class="site-btn sb-c2">Send Kidneys</a>
 							</div>
