--- a/Project/templates/adminheader.html
+++ b/Project/templates/adminheader.html
@@ -38,7 +38,7 @@
 	<!-- Header section -->
 	<header class="header-section clearfix">
 		<a href="index.html" class="site-logo">
-			<img src="/static/img/logo.png" alt="">
+			<img src="/static/img/star.png" alt="">
 		</a>
 		<div class="header-right">
 			<!-- <a href="/" class="main-menu"><font> Home </font></a> -->
@@ -65,6 +65,7 @@
 			<li><a href="contact.html">Contact</a></li>
 		</ul> -->
 	</header>
+	
 
 
 
