--- a/Project/templates/login.html
+++ b/Project/templates/login.html
@@ -1,13 +1,74 @@
-{%include 'publicheader.html'%}
-<form method="post" style="background: #383b70;">
+<!DOCTYPE html>
+<html lang="zxx">
+<head>
+	<title>User Recognition Using Face Detection & Keystroke Dynamics</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="User Recognition">
+	<meta name="keywords" content="keystroke, html">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<!-- Favicon -->
+	<link href="static/img/favicon.ico" rel="shortcut icon"/>
+
+	<!-- Google font -->
+	<link href="static/https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap" rel="stylesheet">
+ 
+	<!-- Stylesheets -->
+	<link rel="stylesheet" href="static/css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="static/css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="static/css/owl.carousel.min.css"/>
+	<link rel="stylesheet" href="static/css/slicknav.min.css"/>
+
+	<!-- Main Stylesheets -->
+	<link rel="stylesheet" href="static/css/style.css"/>
+
+
+	<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+
+</head>
+<body>
+	<!-- Page Preloder -->
+	<div id="preloder">
+		<div class="loader"></div>
+	</div>
+
+	<!-- Header section -->
+	<header class="header-section clearfix">
+		<a href="index.html" class="site-logo">
+			 <img src="static/img/star.png" alt=""> 
+		</a>
+		<div class="header-right">
+			<a href="/" class=""> Home </a>
+			<span>|</span>
+			<div class="user-panel">
+				<a href="/login" class="login">Login</a>
+				<a href="/registerhome" class="register">Register</a>
+			</div> 
+		</div>
+
+	</header>
+	<!-- Header section end -->
+
+	<!-- Hero section -->
+	<section class="hero-section">
+		<div class="hero-slider owl-carousel">
+			<div class="hs-item">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-6">
+							<div class="hs-text">
+								<form method="post" style="background: #0a183d;">
 	<table align="center">
 		<h1 align="center" style="color: white;"><u>Login</u></h1>
 		<tr>
-			<th>User Name:</th>
+			<th style="color: white;">User Name:</th>
 			<td><input type="text" name="uname"></td>
 		</tr>
 		<tr>
-			<th>Password:</th>
+			<th style="color: white">Password:</th>
 			<td><input type="Password" name="password"></td>
 		</tr>
 		<tr>
@@ -17,4 +78,20 @@
 	</tr>
 	</table>
 </form>
+							</div>
+						</div>
+						<div class="col-lg-6">
+							<div class="hr-img">
+								<img src="/static/img/keyboard.png" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</section>
+	<!-- Hero section end -->
+
+
 {% include 'footer.html'%}
