Fixed login css

--- a/Project/templates/login.html
+++ b/Project/templates/login.html
@@ -62,7 +62,7 @@
 							<div class="hs-text">
 								<form method="post" style="background: #0a183d;">
 	<table align="center">
-		<h1 align="center" style="color: white;"><u>Login</u></h1>
+		<h3 align="center" style="color: white;">Login</h3><br>
 		<tr>
 			<th style="color: white;">User Name:</th>
 			<td><input type="text" name="uname"></td>
