--- a/Project/templates/publicheader.html
+++ b/Project/templates/publicheader.html
@@ -14,13 +14,13 @@
 	<link href="static/https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap" rel="stylesheet">
  
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="static/css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="static/css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="static/css/owl.carousel.min.css"/>
-	<link rel="stylesheet" href="static/css/slicknav.min.css"/>
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="/static/css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="/static/css/owl.carousel.min.css"/>
+	<link rel="stylesheet" href="/static/css/slicknav.min.css"/>
 
 	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="static/css/style.css"/>
+	<link rel="stylesheet" href="/static/css/style.css"/>
 
 
 	<!--[if lt IE 9]>
