--- a/Project/templates/publichome.html
+++ b/Project/templates/publichome.html
@@ -1,4 +1,4 @@
-{% include 'publicheader.html'%}
+{% include 'userheader.html'%}
 <marquee>WELCOME</marquee>
 <a href="/">Home</a><br>
 <a href="/login">Login</a><br>
