FIxed userhome css

--- a/Project/templates/publicheader.html
+++ b/Project/templates/publicheader.html
@@ -44,8 +44,8 @@
 			<a href="/" class=""> Home </a>
 			<span>|</span>
 			<div class="user-panel">
-				<a href="/login" class="login">Login</a>
-				<a href="/registerhome" class="register">Register</a>
+				<a href="/login" class="login">Logout</a>
+				<!-- <a href="/" class="Home">Home</a> -->
 			</div> 
 		</div>
 
