--- a/Project/templates/footer.html
+++ b/Project/templates/footer.html
@@ -43,11 +43,11 @@
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 					<div class="social-links">
-						<a href=""><i class="fa fa-instagram"></i></a>
+						<a href="https://www.instagram.com/gamertechie_media_official/"><i class="fa fa-instagram"></i></a>
 						<a href=""><i class="fa fa-pinterest"></i></a>
 						<a href=""><i class="fa fa-facebook"></i></a>
 						<a href=""><i class="fa fa-twitter"></i></a>
-						<a href=""><i class="fa fa-youtube"></i></a>
+						<a href="https://www.youtube.com/channel/UCwvKZh4txgJsQb8NVJ2cDcQ"><i class="fa fa-youtube"></i></a>
 					</div>
 				</div>
 			</div>
