--- a/Project/templates/footer.html
+++ b/Project/templates/footer.html
@@ -7,25 +7,25 @@
 							<div class="footer-widget">
 								<h2>About us</h2>
 								<ul>
-									<li><a href="">Our Story</a></li>
-									<li><a href="">Sol Music Blog</a></li>
+									<li><a href="">Contact</a></li>
+									<!-- <li><a href="">Sol Music Blog</a></li> -->
 									<li><a href="">History</a></li>
 								</ul>
 							</div>
 						</div>
-						<div class="col-sm-4">
+						 <div class="col-sm-4">
 							<div class="footer-widget">
-								<h2>Products</h2>
+								<h2>Info</h2>
 								<ul>
-									<li><a href="">Music</a></li>
-									<li><a href="">Subscription</a></li>
-									<li><a href="">Custom Music</a></li>
-									<li><a href="">Footage</a></li>
+									<li><a href="https://en.wikipedia.org/wiki/Keystroke_dynamics" target="_blank">Keystroke Dynamics</a></li>
+									<li><a href="https://en.wikipedia.org/wiki/Facial_recognition_system" target="_blank">Face Recgnition</a></li>
+									<!-- <li><a href="">Custom Music</a></li>
+									<li><a href="">Footage</a></li> -->
 								</ul>
 							</div>
-						</div>
+						</div> 
 						<div class="col-sm-4">
-							<div class="footer-widget">
+							<!-- <div class="footer-widget">
 								<h2>Playlists</h2>
 								<ul>
 									<li><a href="">Newsletter</a></li>
@@ -33,21 +33,21 @@
 									<li><a href="">Press</a></li>
 									<li><a href="">Contact</a></li>
 								</ul>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
 				<div class="col-xl-6 col-lg-5 order-lg-1">
 					<img src="/static/img/star.png" alt="">
 					<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 					<div class="social-links">
-						<a href="https://www.instagram.com/gamertechie_media_official/"><i class="fa fa-instagram"></i></a>
-						<a href=""><i class="fa fa-pinterest"></i></a>
-						<a href=""><i class="fa fa-facebook"></i></a>
-						<a href=""><i class="fa fa-twitter"></i></a>
-						<a href="https://www.youtube.com/channel/UCwvKZh4txgJsQb8NVJ2cDcQ"><i class="fa fa-youtube"></i></a>
+						<a href="https://www.instagram.com/gamertechie_media_official/" target="_blank"><i class="fa fa-instagram"></i></a>
+						<!-- <a href=""><i class="fa fa-pinterest"></i></a> -->
+						<a href="https://www.facebook.com/gamertechiemedia98/"  target="_blank"><i class="fa fa-facebook" target="_blank"></i></a>
+						<!-- <a href=""><i class="fa fa-twitter"></i></a> -->
+						<a href="https://www.youtube.com/channel/UCwvKZh4txgJsQb8NVJ2cDcQ" target="_blank"><i class="fa fa-youtube"></i></a>
 					</div>
 				</div>
 			</div>
