--- a/Project/templates/index.html
+++ b/Project/templates/index.html
@@ -62,10 +62,10 @@
 						<div class="col-lg-6">
 							<div class="hs-text">
 								<h2><span>User Recognition</span> for everyone.</h2>
-								<p>Keystroke dynamics or typing dynamics refers to the automated method of identifying or confirming the identity of an individual based on the manner and the rhythm of typing on a keyboard. Keystroke dynamics is a behavioral biometric, this means that the biometric factor is ‘something you do’. </p>
-								<p>A facial recognition system is a technology capable of identifying or verifying a person from a digital image or a video frame from a video source. There are multiple methods in which facial recognition systems work, but in general, they work by comparing selected facial features from given image with faces within a database. It is also described as a Biometric Artificial Intelligence based application that can uniquely identify a person by analysing patterns based on the person's facial textures and shape.</p>
-								<a href="#" class="site-btn">Donate now</a>
-								<a href="#" class="site-btn sb-c2">Send Kidneys</a>
+								<p align="justify">Keystroke dynamics or typing dynamics refers to the automated method of identifying or confirming the identity of an individual based on the manner and the rhythm of typing on a keyboard. Keystroke dynamics is a behavioral biometric, this means that the biometric factor is ‘something you do’. </p>
+								<p align="justify">A facial recognition system is a technology capable of identifying or verifying a person from a digital image or a video frame from a video source. There are multiple methods in which facial recognition systems work, but in general, they work by comparing selected facial features from given image with faces within a database. It is also described as a Biometric Artificial Intelligence based application that can uniquely identify a person by analysing patterns based on the person's facial textures and shape.</p>
+								<a href="/" class="site-btn">Home</a>
+								<a href="/login" class="site-btn sb-c2">Login</a>
 							</div>
 						</div>
 						<div class="col-lg-6">
@@ -76,24 +76,7 @@
 					</div>
 				</div>
 			</div>
-<!-- 			<div class="hs-item">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-6">
-							<div class="hs-text">
-								<h2><span>GIVE MEH </span> Caffein</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
-								<a href="#" class="site-btn">Donate now</a>
-								<a href="#" class="site-btn sb-c2">Send Kidneys</a>
-							</div>
-						</div>
-						<div class="col-lg-6">
-							<div class="hr-img">
-								<img src="/static/img/keyboard.png" alt="">
-							</div>
-						</div>
-					</div>
-				</div> -->
+
 			</div>
 		</div>
 	</section>
@@ -108,24 +91,24 @@
 							<div class="footer-widget">
 								<h2>About us</h2>
 								<ul>
-									<li><a href="">Our Story</a></li>
-									<li><a href="">Sol Music Blog</a></li>
+									<li><a href="">Contact</a></li>
+									<!-- <li><a href="">Sol Music Blog</a></li> -->
 									<li><a href="">History</a></li>
 								</ul>
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="footer-widget">
-								<h2>Products</h2>
+								<h2>Info</h2>
 								<ul>
-									<li><a href="">Music</a></li>
-									<li><a href="">Subscription</a></li>
-									<li><a href="">Custom Music</a></li>
-									<li><a href="">Footage</a></li>
+									<li><a href="https://en.wikipedia.org/wiki/Keystroke_dynamics" target="_blank">Keystroke Dynamics</ahttps://en.wikipedia.org/wiki/Keystroke_dynamics></li>
+									<li><a href="https://en.wikipedia.org/wiki/Facial_recognition_system" target="_blank">Facial Recognition</a></li>
+									<!-- <li><a href="">Custom Music</a></li>
+									<li><a href="">Footage</a></li> -->
 								</ul>
 							</div>
 						</div>
-						<div class="col-sm-4">
+						<!-- <div class="col-sm-4">
 							<div class="footer-widget">
 								<h2>Playlists</h2>
 								<ul>
@@ -135,21 +118,21 @@
 									<li><a href="">Contact</a></li>
 								</ul>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 				<div class="col-xl-6 col-lg-5 order-lg-1">
 					<img src="/static/img/star.png" alt="">
 					<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
-					<!-- <div class="social-links">
-						<a href=""><i class="fa fa-instagram"></i></a>
-						<a href=""><i class="fa fa-pinterest"></i></a>
-						<a href=""><i class="fa fa-facebook"></i></a>
-						<a href=""><i class="fa fa-twitter"></i></a>
-						<a href=""><i class="fa fa-youtube"></i></a>
-					</div> -->
+					<div class="social-links">
+						<a href="https://www.instagram.com/gamertechie_media_official/" target="_blank"><i class="fa fa-instagram"></i></a>
+						<!-- <a href=""><i class="fa fa-pinterest"></i></a> -->
+						<a href="https://www.facebook.com/gamertechiemedia98/"  target="_blank"><i class="fa fa-facebook"></i></a>
+						<!-- <a href=""><i class="fa fa-twitter"></i></a> -->
+						<a href="https://www.youtube.com/channel/UCwvKZh4txgJsQb8NVJ2cDcQ" target="_blank"><i class="fa fa-youtube"></i></a>
+					</div>
 				</div>
 			</div>
 		</div>
