--- a/Project/templates/publicheader.html
+++ b/Project/templates/publicheader.html
@@ -60,10 +60,10 @@
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="hs-text">
-								<h2><span>Music</span> for everyone.</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
-								<a href="#" class="site-btn">Download Now</a>
-								<a href="#" class="site-btn sb-c2">Start free trial</a>
+								<h2><span>Hello</span>There</h2>
+								<p align="justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+								<!-- <a href="https://www.youtube.com/watch?v=yE85edTFpHU" class="site-btn">Fun Facts</a>
+								<a href="/login" class="site-btn sb-c2">Logout</a> -->
 							</div>
 						</div>
 						<div class="col-lg-6">
