--- a/Project/templates/publichome.html
+++ b/Project/templates/publichome.html
@@ -4,3 +4,4 @@
 <a href="/login">Login</a><br>
 <a href="/registerhome">Register</a>
 {% include 'footer.html' %}
+<!-- JUNK FILE REMOVE SOME OTHER TIME --!>
